# wdecorators

./: README.md  README_template.md  dynamic_task.py  priory_task.py  pyproject.toml  requirements.txt  setup.py  task_logs_v14.db
enviroment/graylog/: Makefile  docker-compose.yml  generator.sh  graylog.env
enviroment/postgress/: docker-compose.yaml
examples/graylog/: example_fastapi.py  example_script.py
examples/periodic_task/: basic.py
static/css/: styles.css
templates/: base.html  dashboard.html  login.html
wdecorators/: __init__.py
wdecorators/general/: benchmark.py  count_calls.py  debug_arguments.py  disk_cache.py  log_exceptions.py  log_return.py  memoize.py  periodic_execution.py  profile_memory.py  rate_limit.py  require_authentication.py  retry.py  retry_on_exception.py  sanitize_input.py  silent_fail.py  singleton.py  time_execution.py  timeout.py  to_json.py  trace_execution.py  validate_types.py
wdecorators/graylog/: __init__.py  handler.py  loggerg.py  middleware.py
wdecorators/log_calls/: log_calls.py
wdecorators/periodic_scheduller/: __init__.py  controller.py
