[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wdecorators"
version = "0.1.0"
authors = [
    { name="wisrovi", email="wisrovi.rodriguez@gmail.com" },
]
description = "Decorators for Python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "loguru",
]

[project.urls]
"Homepage" = "https://github.com/wisrovi/wdecorators"
"Bug Tracker" = "https://github.com/wisrovi/wdecorators/issues"